# LLDBagility

./: .gitignore  CHANGELOG.md  LICENSE  README.md
FDP/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  helper.py  virtualbox-build.py  virtualbox-pack.py
FDP/FDP/: FDP.c
FDP/FDP/include/: FDP.h  FDP_enum.h  FDP_structs.h
FDP/PyFDP/: setup.py
FDP/PyFDP/PyFDP/: FDP.py  __init__.py
FDP/TestFDP/: testFDP.c  testFDPClientServer.c
FDP/VirtualBox-6.1.6/: VirtualBox-6.1.6-FDP-macOS.diff  build.py  pack.py
FDP/VirtualBox-6.1.6/misc/: rebuild.sh  receive.sh
FDP/virtualbox/: .scm-settings  Config.kmk  Maintenance.kmk  Makefile.kmk  Version.kmk  configure  configure.vbs
FDP/virtualbox/debian/: changelog  postinst  postrm  preinst  prerm  rules
FDP/virtualbox/doc/: .scm-settings  VBox-CodingGuidelines.cpp  VBox-MakefileGuidelines.cpp  VBox-doc.c  kBuild-tricks.txt
FDP/virtualbox/doc/manual/: .scm-settings  Config.kmk  Makefile.kmk  user_ChangeLogImpl.xml
FDP/virtualbox/include/: .scm-settings  Makefile.kmk
FDP/virtualbox/include/VBox/: VBoxDrvCfg-win.h  VBoxNetCfg-win.h  VBoxNetCmn-win.h  VBoxOGL.h  VBoxPktDmp.h  VBoxTpG.h  VMMDevTesting.h  VMMDevTesting.mac  ata.h  bioslogo.h  intnetinline.h  scsiinline.h  sup.mac  various.sed  (+1 more)
FDP/virtualbox/kBuild/: env.sh  footer-misc.kmk  footer-pass1.kmk  footer-pass2-compiling-targets.kmk  footer-pass2-installs.kmk  footer.kmk  header.kmk  rules.kmk  subfooter.kmk  subheader.kmk  up.kmk
FDP/virtualbox/src/: Makefile.kmk
FDP/virtualbox/tools/: .scm-settings  CommonFetch.kmk  Makefile-ose.kmk
(+5399 files in other folders)
